fix: When tabs exceed size of available space on a large desktop breakpoint they overlap the right hand side bar

--- a/app/bundles/CoreBundle/Assets/css/app/less/components/navs.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/navs.less
@@ -138,12 +138,6 @@
   }
 }
 
-@media (min-width: @screen-lg-min) {
-  .nav-tabs {
-    flex-wrap: nowrap;
-  }
-}
-
 // Tabs content
 // -------------------------
 /*
